# StreamingResponseAgent

./: LICENSE  README.md
Backend/: pyproject.toml
Backend/app/: main.py
Backend/app/api/: chat.py  healthcheck.py
Backend/app/core/agent_logic/: agent.py  agent_service.py  deep_agent.py  prompt.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.js  App.tsx  index.css
frontend/src/api/: chat.ts
frontend/src/components/: AnimatedBackground.tsx  ChatInput.tsx  ChatMessage.tsx  Header.tsx  ScrollToBottom.tsx  Sidebar.tsx  SubAgentCard.tsx  ToolCallCard.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/types/: index.ts
