[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "uvicorn>=0.49.0",
]
